[project]
name = "stayease"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "celery>=5.6.3",
    "django>=5.2.12",
    "django-celery-beat>=2.9.0",
    "django-filter>=25.2",
    "djangorestframework>=3.17.1",
    "djangorestframework-simplejwt>=5.5.1",
    "drf-spectacular[sidecar]>=0.29.0",
    "pillow>=12.2.0",
    "redis>=8.0.0",
    "requests>=2.34.2",
]
